--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <h1>Bem-vinda ao meu site 💗</h1>
+    <h1>Bem-vindo ao meu site 💗</h1>
     <nav>
       <a href="#">Início</a>
       <a href="#">Sobre</a>
