--- a/index.html
+++ b/index.html
@@ -1,27 +1,66 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Site da Letty</title>
+  <title>Portfólio Lettycia</title>
+  <!-- Link para o CSS externo -->
   <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
+
+  <!-- Cabeçalho com título e menu -->
   <header>
-    <h1>Bem-vindo ao meu site 💗</h1>
+    <h1 id="inicio">Bem-vindo ao meu site 💖</h1>
     <nav>
-      <a href="#">Início</a>
-      <a href="#">Sobre</a>
-      <a href="#">Contato</a>
+      <a href="#inicio">Início</a>
+      <a href="#sobre">Sobre</a>
+      <a href="#formacao">Formação</a>
+      <a href="#portfolio">Portfólio</a>
+      <a href="#contato">Contato</a>
     </nav>
+    <img src="17826.webp" alt="Banner do site" class="banner" />
   </header>
 
+  <!-- Seção Sobre Mim -->
+  <section id="sobre">
+    <h2>Sobre mim</h2>
+    <p>Olá! Meu nome é Lettycia, sou uma pessoa jovem, criativa e determinada. Gosto de inovar e crescer profissionalmente e pessoalmente. Meus hobbies incluem desenhar, ouvir música e aprender novas línguas, como o espanhol e inglês.</p>
+  </section>
+
+  <!-- Seção Formação -->
+  <section id="formacao">
+    <h2>Formação</h2>
+    <p>Atualmente estou cursando Análise e Desenvolvimento de Sistemas e também estudo inglês e espanhol por fora. Estou sempre em busca de aprender mais para crescer na área de tecnologia e comércio interno e externo.</p>
+  </section>
+
+  <!-- Seção Portfólio -->
+  <section id="portfolio">
+    <h2>Portfólio</h2>
+    <p>Veja abaixo alguns exemplos de sites e projetos que desenvolvi durante o curso:</p>
+    <ul>
+      <li><a href="https://lettyciasales.github.io/meuwebsite/" target="_blank" rel="noopener noreferrer">Projeto do site pessoal</a></li>
+      <li><a href="#" target="_blank" rel="noopener noreferrer">Exercício prático de HTML e CSS</a></li>
+    </ul>
+  </section>
+
+  <!-- Seção Contato -->
+  <section id="contato">
+    <h2>Contato</h2>
+    <p>📞 Telefone: <a href="tel:+5551995045404">(54) 99504-5404</a></p>
+    <p>📧 Email: <a href="mailto:lettycia.salees@gmail.com">Lettycia.salees@gmail.com</a></p>
+    <p>💬 WhatsApp: <a href="https://wa.me/5551995045404" target="_blank" rel="noopener noreferrer">Clique para conversar</a></p>
+    <p>🌐 Instagram: <a href="https://instagram.com/sales.letty" target="_blank" rel="noopener noreferrer">@sales.letty</a></p>
+  </section>
+
+  <!-- Imagem Banner -->
   <main>
-    <img src="17826.webp" alt="Banner do site" class="banner">
-    <p>Este é um projeto feito para a disciplina de Ferramentas da Programação Web.</p>
+    <p style="text-align: center;">Este é um projeto feito para a disciplina de Ferramentas da Programação Web.</p>
   </main>
 
+  <!-- Rodapé -->
   <footer>
     <p>Feito por Lettycia Abiaes Sales - 2025</p>
   </footer>
+
 </body>
 </html>
