--- a/index.html
+++ b/index.html
@@ -50,6 +50,20 @@
     <p>📧 Email: <a href="mailto:lettycia.salees@gmail.com">Lettycia.salees@gmail.com</a></p>
     <p>💬 WhatsApp: <a href="https://wa.me/5551995045404" target="_blank" rel="noopener noreferrer">Clique para conversar</a></p>
     <p>🌐 Instagram: <a href="https://instagram.com/sales.letty" target="_blank" rel="noopener noreferrer">@sales.letty</a></p>
+
+    <form>
+  <label for="nome">Nome:</label>
+  <input type="text" id="nome" name="nome" required>
+
+  <label for="email">Email:</label>
+  <input type="email" id="email" name="email" required>
+
+  <label for="mensagem">Mensagem:</label>
+  <textarea id="mensagem" name="mensagem" rows="4" required></textarea>
+
+  <input type="submit" value="Enviar">
+</form>
+
   </section>
 
   <!-- Imagem Banner -->
